# ALGO

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  log.txt  log_drawing1.txt
crates/cadconvert-algo/: Cargo.toml
crates/cadconvert-algo/src/: lib.rs  reconstruction.rs  solid_builder.rs  step_writer.rs  structs.rs  topology.rs  view_separation.rs
crates/cadconvert-cli/: Cargo.toml
crates/cadconvert-cli/src/: main.rs
crates/cadconvert-core/: Cargo.toml
crates/cadconvert-core/src/: analysis.rs  geom.rs  lib.rs  model.rs  normalize.rs  report.rs  step.rs  view.rs
crates/cadconvert-core/tests/: normalize.rs  step.rs  view_assignment.rs
crates/cadconvert-gui/: Cargo.toml  check_output.txt
crates/cadconvert-gui/src/: main.rs
crates/cadconvert-import-dxf/: Cargo.toml
crates/cadconvert-import-dxf/src/: lib.rs
crates/cadconvert-import-svg/: Cargo.toml
crates/cadconvert-import-svg/src/: lib.rs
