[workspace]
resolver = "2"
members = [
  "crates/cadconvert-core",
  "crates/cadconvert-import-dxf",
  "crates/cadconvert-import-svg",
  "crates/cadconvert-cli",
  "crates/cadconvert-gui",
  "crates/cadconvert-algo",
]
[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
roxmltree = "0.21.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.9"
eframe = "0.33.3"
egui = "0.33.3"
open = "5.3.3"
rfd = "0.16.0"
